--- a/web.css
+++ b/web.css
@@ -2,28 +2,54 @@
     margin: 0px;
 }
 body{
-    background-color:whitesmoke;
+    background: rgb(255,255,255);
+background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(241,238,238,1) 100%);
     font-family: 'Times New Roman', Times, serif;
+    justify-content: space-around;
 }
 nav{
+    font-size: 25px;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    min-height: 8vh;
+    min-height: 10vh;
     background-color: black;
 }
-nav-links{
-    
+footer {
+	padding: 0.7rem;
+	clear: both;
+	color: #fff;
+	text-align: center;
+	background-color: black;
+	position: relative;
 }
-#logo{
-    width: 5px;
-    height: 5px;
-    color: white;
+#nav-links{
+    display: flex;
+    justify-content: space-around;
+    width: 30%;
+}
+#nav-links a{
+    color: #f4f4f2;
+    text-decoration: none;
+    letter-spacing: 3px;
+    font-weight: bold;
+}
+#nav-links li{
+    list-style: none;
+}
+#logo a{
+    color: #f4f4f2;
+    text-decoration: none;
+    letter-spacing: 3px;
+    font-weight: bold; 
 }
 hr{
     width: 80%;
     margin-left: auto;
     margin-right: auto;
+}
+h3{
+    font-size: 31px;
 }
 header{
     height: 10%;
@@ -47,7 +73,6 @@ header{
     margin: auto;
     margin-left: 170px;
     margin-top: 40px;
-    border: 5px solid whitesmoke;
 }
 #Fname img{
     border: 2px solid black;
@@ -72,7 +97,6 @@ header{
     margin-top: 25px;
     padding: 10px;
     font-size: 22px;
-    border: 5px solid whitesmoke;
 }
 #Fsample img{
     display: block;
@@ -93,7 +117,6 @@ header{
     margin: auto;
     margin-right: 170px;
     margin-top: 40px;
-    border: 5px solid whitesmoke;
 }
 #Jname img{
     border: 2px solid black;
@@ -116,7 +139,6 @@ header{
     text-align: left;
     margin-left: 170px;
     font-size: 21px;
-    border: 5px solid whitesmoke;
     margin-top: 35px;
 }
 #Jsample img{
@@ -138,7 +160,6 @@ header{
     margin: auto;
     margin-left: 170px;
     margin-top: 40px;
-    border: 5px solid whitesmoke;
 }
 #Pname img{
     border: 2px solid black;
@@ -164,7 +185,6 @@ header{
     margin-top: 10px;
     padding: 10px;
     font-size: 20px;
-    border: 5px solid whitesmoke;
 }
 #Psample img{
     display: block;
@@ -176,4 +196,75 @@ header{
     text-align: center;
     width: 80%;
     margin: auto;
+}
+#Abio{
+    margin: 8px;
+    text-indent: 30px;
+    width: 50%;
+    float: left;
+    text-align: left;
+    margin-left: 170px;
+    font-size: 21px;
+    margin-top: 55px;
+}
+#Bbio {
+    margin: 8px;
+    text-indent: 30px;
+    width: 50%;
+    float: right;
+    text-align: left;
+    margin-right: 170px;
+    margin-top: 10px;
+    padding: 20x;
+    font-size: 22px;
+}
+#Ibio{
+    margin: 8px;
+    text-indent: 30px;
+    width: 50%;
+    float: left;
+    text-align: left;
+    margin-left: 170px;
+    font-size: 23px;
+    margin-top: 55px;
+}
+#Cbio {
+    margin: 8px;
+    text-indent: 30px;
+    width: 50%;
+    float: right;
+    text-align: left;
+    margin-right: 170px;
+    margin-top: 10px;
+    padding: 20x;
+    font-size: 25px;
+}
+#Vbio{
+    margin: 8px;
+    text-indent: 30px;
+    width: 50%;
+    float: left;
+    text-align: left;
+    margin-left: 170px;
+    font-size: 20px;
+    margin-top: 40px;
+}
+#Vname{
+    margin: 8px;
+    width: 20%;
+    text-align: center;
+    float: right;
+    margin: auto;
+    margin-right: 170px;
+    margin-top: 60px;
+
+}
+#Vname p {
+    margin-top: 0%;
+    font-size: 20px;
+    text-align: center;
+    font-weight: normal;
+}
+#all {
+    box-shadow: 0 0 10px black;
 }
